PN-16717 - septies: merged changes from branches quinquies and sixties